# R2RA

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  buildspec.yml  start.sh
.ebextensions/: 01_env.config
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 992da4aaacff_initial.py  a1b2c3d4e5f6_add_tr_responses.py  b2c3d4e5f6a7_add_signature_print_name.py  c3d4e5f6a7b8_add_unit_evidence.py  d4e5f6a7b8c9_add_crosswalk_editor.py  e5f6a7b8c9d0_widen_audit_log_entity_id.py  f6a7b8c9d0e1_add_score_to_tr_responses.py  g7h8i9j0k1l2_add_scenario_ref_to_assessments.py  h8i9j0k1l2m3_add_exercises.py
backend/app/: audit.py  config.py  database.py  main.py  storage.py  upload_validation.py
backend/app/auth/: deps.py  security.py  totp.py
backend/app/models/: __init__.py  assessment.py  audit_log.py  crosswalk_override.py  evidence.py  exercise.py  response.py  signature.py  tr_response.py  unit.py  unit_evidence.py  user.py
backend/app/routers/: assessments.py  auth.py  content.py  crosswalk.py  crosswalk_editor.py  evidence.py  exercises.py  health.py  reports.py  unit_library.py  users.py
backend/app/schemas/: assessment.py  auth.py  exercise.py
content/: README.md
content/crosswalk/: jts_r2__hss_tr.yaml
content/frameworks/: hss_tr.json
deploy/: docker-compose.prod.yml  nginx.conf
docs/: DEPLOY.md  DEVLOG.md  STRATEGY.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: sw.js
scripts/: tag_role2_relevance.py
(+73 files in other folders)
